--- a/lab1/LAB1_lucasho.Rmd
+++ b/lab1/LAB1_lucasho.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: 
   html_document:
     toc: true
-    theme: united
+    toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
