--- a/Lab6/lab6_lucasho.Rmd
+++ b/Lab6/lab6_lucasho.Rmd
@@ -1,7 +1,24 @@
+---
+title: "Lab 6"
+author: "Lucas Ho"
+date: "`r Sys.Date()`"
+output: 
+  html_document:
+    toc: TRUE
+    toc_float: TRUE
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
 # Task 1
+```{r}
 getwd()
+```
 
 # Task 2
+```{r}
 layout(matrix(1:4, nr=2,nc=2))
 
 curve(dnorm(x, mean=10,sd=4),xlim=c(-2,22))
@@ -38,8 +55,10 @@ ycurve=dnorm(xcurve, mean=-2, sd=1/2)
 polygon(c(-3,xcurve,-2),c(0,ycurve,0),col="Red")
 prob = round(pnorm(-2,mean=-2,sd=1/2)-pnorm(-3,mean=-2,sd=1/2), 4)
 print(prob)
+```
 
 # Task 3
+```{r}
 x <- seq(0, 10, 0.1)
 plot(x, dgamma(x, shape=1,scale=1), xlim=c(0,10), ylim=c(0,1), type = "l", col="Blue", lwd=2, ylab="Gamma Density")
 lines(x, dgamma(x, shape=3,scale=1), col="Red", lwd=2)
@@ -66,8 +85,10 @@ ycurve=dgamma(xcurve, shape=2, scale=4)
 polygon(c(3, xcurve, 6),c(0,ycurve,0), col="Red")
 prob = round(pgamma(6, shape=2, scale=4) - pgamma(3, shape=2,scale=4), 4)
 print(prob)
+```
 
 # Task 4
+```{r}
 layout(matrix(1:4, nr=2,nc=2))
 
 curve(dchisq(x,df=1),xlim=c(0,10),ylim=c(0,1),lwd=2,
@@ -104,14 +125,16 @@ ycurve = dchisq(xcurve, df=20)
 polygon(c(10, xcurve, 21), c(0,ycurve,0), col="Red")
 prob = round(pchisq(21, df=20) - pchisq(10, df=20), 4)
 print(prob)
+```
 
 # Task 5
+```{r}
 layout(matrix(1:4, nr=2,nc=2))
 
 curve(dgamma(x, shape=1,scale=1), xlim=c(0,5), ylim=c(0,1), lwd=2, ylab="Weibull Density", main="Shape=1,Scale=1")
 curve(dgamma(x, shape=3,scale=1), xlim=c(0,10), ylim=c(0,0.4), lwd=2, ylab="Weibull Density", main="Shape=3,Scale=1")
 curve(dgamma(x, shape=5,scale=1), xlim=c(0,10), ylim=c(0,0.3), lwd=2, ylab="Weibull Density", main="Shape=5,Scale=1")
-curve(dgamma(x, shape=3,scale=4), xlim=c(0,30), ylim=c(0,0.2), lwd=2, ylab="Weibull Density", main="Shape=3,Scale=4")
+curve(dgamma(x, shape=3,scale=4), xlim=c(0,30), ylim=c(0,0.2), lwd=2, ylab="Weibull Density", main="Shape=1,Scale=4")
 
 par(mfrow=c(1,1))
 
@@ -135,8 +158,10 @@ ycurve=dweibull(xcurve, shape=2, scale=4)
 polygon(c(3, xcurve, 6),c(0,ycurve,0), col="Red")
 prob = round(pweibull(6, shape=2, scale=4) - pweibull(3, shape=2,scale=4), 4)
 print(prob)
+```
 
 # Task 6
+```{r}
 layout(matrix(1:4, nr=2,nc=2))
 
 curve(dbeta(x, shape1=1,shape2=2), xlim=c(0,2), ylim=c(0,1.5), lwd=2, ylab="Beta Density", main="Shape1=1,Shape2=2")
@@ -166,3 +191,8 @@ ycurve=dbeta(xcurve, shape1=2, shape2=4)
 polygon(c(0, xcurve, 0.25),c(0,ycurve,0), col="Red")
 prob = round(pbeta(0.25, shape1=2, shape2=4) - pbeta(0, shape1=2,shape2=4), 4)
 print(prob)
+```
+
+# Task 7
+```{r}
+```
