completes task 1-6 of lab7

--- a/Assignment1/assignment1_lucasho.Rmd
+++ b/Assignment1/assignment1_lucasho.Rmd
@@ -1,75 +1,147 @@
+---
+title: "Assignment1_LucasHo"
+author: "Lucas Ho"
+date: "`r Sys.Date()`"
+output: 
+  html_document:
+    toc: TRUE
+    toc_float: TRUE
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+```{r}
+14/15
+```
+
 # Q1
+```{r}
 assignments <- c("In-class quizzes", "Laboratories", "Chapter Quizzes", "Project 1", "Project 2", "Exam 1", "Exam 2", "Assignments", "Final Exam")
 weight <- c(0.1, 0.1, 0.05, 0.0333, 0.0667, 0.1, 0.1, 0.15, 0.3)
 
 grade.df <- data.frame(Assignments=assignments, Weight=weight)
+```
 
 # Q2
+```{r}
+# (a)
 ddt <- read.csv("DDT.csv")
 
 ddt$MILE <- as.factor(ddt$MILE)
 
 coplot(WEIGHT~LENGTH | RIVER*SPECIES, data=ddt, col="Blue", pch=1.2, xlab="Length", ylab="Weight", )
 
-# Each plot represents the length and width of the fish given both the river and species
+# (b)
+## Each plot represents the length and width of the fish given both the river and species
 
-# This creates a numeric vector where each element corresponds to the numeric representation of the levels in MILE
+# (c)
+## This creates a numeric vector where each element corresponds to the numeric representation of the levels in MILE
 
-# This returns the number of unique values from m
+# (d)
+## This returns the number of unique values from m
 
-# There are no observations from the the two corresponding variables
+# (e)
+## There are no observations from the the two corresponding variables
 
+# (f)
 ddt[ddt$RIVER=="FCM" & ddt$SPECIES=="CCATFISH",]
+```
 
 # Q3
-# Quantitative
-# Quantitative
-# Qualitative
-# Quantitative
-# Qualitative
-# Quantitative
-# Qualitative
+```{r}
+# (a)
+## Quantitative
+
+# (b)
+## Quantitative
+
+# (c)
+## Qualitative
+
+# (d)
+## Quantitative
+
+# (e)
+## Qualitative
+
+# (f)
+## Quantitative
+
+# (g)
+## Qualitative
+```
 
 # Q4
-# Simple, stratified, cluster, and systematic random sampling
-# Simple random sampling ensures that every subset of fixed size in the population has the same chance of being included in the sample
-# Stratified random sampling is typical used when the experimental units associated with the population can be separated into two or more groups of units where the characteristics of the units are more similar within the units than across the units
-# Cluster random sampling is used to sample natural groupings of experimental units first, then collect data from all experimental units within each cluster.
-# Systematic random sampling involves systematically selecting every kth experimental unit from list of all experimental units
+```{r}
+# (a)
+## Simple, stratified, cluster, and systematic random sampling
+
+# (b)
+## Simple random sampling ensures that every subset of fixed size in the population has the same chance of being included in the sample
+## Stratified random sampling is typical used when the experimental units associated with the population can be separated into two or more groups of units where the characteristics of the units are more similar within the units than across the units
+## Cluster random sampling is used to sample natural groupings of experimental units first, then collect data from all experimental units within each cluster.
+## Systematic random sampling involves systematically selecting every kth experimental unit from list of all experimental units
+```
 
 # Q5
+```{r}
 mtbe <- read.csv("MTBE.csv")
 
 ind=sample(1:223,5,replace=FALSE)
 
 mtbe[ind,]
 
+# (a)
+### (i)
 mtbeo = na.omit(mtbe)
 
+### (ii)
 depth = mtbeo[mtbeo$Aquifier=="Bedrock",]$Depth
 
 sd(depth)
+```
 
 # Q6
+```{r}
 eq <- read.csv("EARTHQUAKE.csv")
 
 v=sample(1:2929,30,replace=FALSE)
 
 eq[v,]
 
+# (a)
+### (i)
 plot(ts(eq$MAG))
 
+### (ii)
 median(eq$MAGNITUDE)
+```
 
 # Q7
-# Stratified random sampling
-# Fish in the Tennessee River
-# Capture location and species
+```{r}
+# (a)
+## Stratified random sampling
+
+# (b)
+## Fish in the Tennessee River
+
+# (c)
+## Capture location and species
+```
 
 # Q8
-# Bar plot
-# Number of robots
-# Legs ONLY
+```{r}
+# (a)
+## Bar plot
+
+# (b)
+## Number of robots
+
+# (c)
+## Legs ONLY
+
+# (d)
 none =  round(15/106, 4)
 both = round(8/106, 4)
 lego = round(63/106, 4)
@@ -88,29 +160,38 @@ pareto <- function(x, mn = "Pareto barplot") {  # x is a vector
   title(main = mn)
 }
 pareto(c(none, both, lego, wheelo))
+```
 
 # Q9
+```{r}
 microcategory <- c("Denial of service", "Information disclosure", "Remote code execution", "Spoofing", "Privilege elevation")
 microvalues <- c(6, 8, 22, 3, 11)
 pie(microvalues, labels = microcategory)
 
 pareto(microvalues)
+```
 
 # Q10
+```{r}
 library(plotrix)
 swd <- read.csv("SWDEFECTS.csv")
 tab = table(swd$defect)
 rtab = tab/sum(tab)
 round(rtab,2)
 pie3D(rtab, labels=list("OK", "Defective"), main="pie plot of SWD")
+```
 
-# Q 11
+# Q11
 
-# Q 12
+# Q12
+```{r}
 roughpipe = read.csv("ROUGHPIPE.csv")
 rpint=c(mean(roughpipe$ROUGH) - (2 * sd(roughpipe$ROUGH)), mean(roughpipe$ROUGH) + (2 * sd(roughpipe$ROUGH)))
+```
 
-# Q 13
+# Q13
+```{r}
+# (a)
 gants <- read.csv("GOBIANTS.csv")
 mean(gants$AntSpecies)
 median(gants$AntSpecies)
@@ -120,33 +201,46 @@ getmode <- function(v) {
 }
 getmode(gants$AntSpecies)
 
-# Median as this is not skewed by outliers
+# (b)
+## Median as this is not skewed by outliers
 
+# (c)
 mean(gants[gants$Region=="Dry Steppe",]$PlantCov)
 median(gants[gants$Region=="Dry Steppe",]$PlantCov)
 getmode(gants[gants$Region=="Dry Steppe",]$PlantCov)
 
+# (d)
 mean(gants[gants$Region=="Gobi Desert",]$PlantCov)
 median(gants[gants$Region=="Gobi Desert",]$PlantCov)
 getmode(gants[gants$Region=="Gobi Desert",]$PlantCov)
 
-# Yes the center of the total plant cover percentage distribution appear to be different
+# (e)
+## Yes the center of the total plant cover percentage distribution appear to be different
+```
 
-# Q 14
+# Q14
+```{r}
+# (a)
 glx <- read.csv("GALAXY2.csv")
 glx.df <- rnorm(51, mean = mean(glx$VELOCITY), sd = sd(glx$VELOCITY))
 hist(glx.df)
 
-# No evidence as this appears to be a uni modal distribution
+# (b)
+## No evidence as this appears to be a uni modal distribution
 
+# (c)
 mean(glx$VELOCITY)
 median(glx$VELOCITY)
 getmode(glx$VELOCITY)
 sd(glx$VELOCITY)
 
-# A1775A because the value is more closer the median
+# (d)
+## A1775A because the value is more closer the median
+```
 
-# Q 15
+# Q15
+```{r}
 library(ggplot2)
 
 ggplot(data = ddt, aes(x = RIVER, y = LENGTH, fill=SPECIES)) + geom_boxplot() + ggtitle("Lucas Ho")
+```
